--- a/conf/application.conf
+++ b/conf/application.conf
@@ -124,7 +124,7 @@ play.http {
   # common logic for all your actions, e.g. adding common headers.
   # Defaults to "Filters" in the root package (aka "apps" folder)
   # Alternatively you can explicitly register a class here.
-  #filters = my.application.Filters
+  # filters = app.Filters
 
   ## Session & Flash
   # https://www.playframework.com/documentation/latest/JavaSessionFlash
@@ -235,7 +235,7 @@ play.filters {
     #pathPrefixes = ["/some/path", ...]
 
     # The allowed origins. If null, all origins are allowed.
-    #allowedOrigins = ["http://www.example.com"]
+    # allowedOrigins = null //["http://www.example.com"]
 
     # The allowed HTTP methods. If null, all methods are allowed
     #allowedHttpMethods = ["GET", "POST"]
